2001-09-20  Alan Modra  <amodra@bigpond.net.au>

	* coffread.c: Replace all occurrences of bfd_read with bfd_bread.
	* dbxread.c: Likewise.
	* dwarf2read.c: Likewise.
	* dwarfread.c: Likewise.
	* somread.c: Likewise.
	* ultra3-nat.c: Likewise.
	* xcoffread.c: Likewise.

2001-09-19  Andrew Cagney  <ac131313@redhat.com>

	* cris-tdep.c (cris_get_signed_offset): Change return type to an
	explicitly signed char.

	* config/mcore/tm-mcore.h (mcore_virtual_frame_pointer): Update
	function signature to match recent tracepoint.c:encode_actions
	changes.
	* mcore-tdep.c (mcore_virtual_frame_pointer): Ditto.

2001-09-18  Andrew Cagney  <ac131313@redhat.com>

	* thread.c (do_captured_thread_select): Add uiout parameter.
	(do_captured_list_thread_ids): Ditto.
	* breakpoint.c (do_captured_breakpoint_query): Ditto.

	* breakpoint.c (gdb_breakpoint_query): Update.  Use
	catch_exceptions.
	* thread.c (gdb_list_thread_ids): Ditto.
	(gdb_thread_select): Ditto.
	(thread_command): Pass uiout to gdb_thread_select.

	* gdb.h (gdb_breakpoint_query): Add parameter ui_out.
	(gdb_thread_select, gdb_list_thread_ids): Ditto.

2001-09-13  Kevin Buettner  <kevinb@redhat.com>

	From Ilya Golubev <gin@mo.msk.ru>:
	* solib.c (clear_solib): Call `remove_target_sections' to fix
	stale pointers in `struct target_ops'.
	* irix5-nat.c (clear_solib): Likewise.
	* osfsolib.c (clear_solib): Likewise.

2001-09-13  Jim Blandy  <jimb@redhat.com>

	* monitor.c (monitor_load): Don't delete symtab users, or reset
	inferior_ptid.
	
	* monitor.c (monitor_load): Fix indentation.

2001-09-11  Jim Blandy  <jimb@redhat.com>

	* printcmd.c (print_scalar_formatted): Compare the length of the
	value against the lengths of the target's floating-point types,
	not the host's.  Add support for `long double'.

	* printcmd.c (print_scalar_formatted): Fix indentation.

2001-09-10  Jim Blandy  <jimb@redhat.com>

	* rom68k-rom.c (init_rom68k_cmds): Set the flag indicating that
	programs running on the board can produce output.
